# git-substitute

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/git_substitute/: __init__.py  tool.py
tests/: test_git_substitute.py
tests/data/: commands_template.cpp  escape_template.cpp  variables_template.cpp
